--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Random</string>
+    <string name="app_name">吃什么</string>
     <string name="none">   </string>
     <string name="action_settings">Settings</string>
 
